--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
 <body>
 
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <h1>Meet Our Team</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi molestias quas dicta recusandae
+                aspernatur,
+                totam fugit
+                animi beatae quaerat
+                quasi voluptatum delectus impedit explicabo ex, et tempore dolore? Assumenda, animi:</p>
+        </div>
+    </header>
+
+
 </body>
 
 </html>
