--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </div>
     </header>
 
+    <!-- User cards -->
+    <main>
+        <div class="container">
+            <div class="user-card">Lorem ipsum</div>
+            <div class="user-card">Lorem ipsum</div>
+            <div class="user-card">Lorem ipsum</div>
+        </div>
+    </main>
 
 </body>
 
