--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <!-- User cards -->
     <main>
         <div class="container">
-            <div class="user-card">Lorem ipsum</div>
-            <div class="user-card">Lorem ipsum</div>
-            <div class="user-card">Lorem ipsum</div>
+            <div class="user-container">
+                <div class="user-card">Lorem ipsum</div>
+                <div class="user-card">Lorem ipsum</div>
+                <div class="user-card">Lorem ipsum</div>
+            </div>
         </div>
     </main>
 
