--- a/index.html
+++ b/index.html
@@ -35,9 +35,16 @@
     <main>
         <div class="container">
             <div class="user-container">
-                <div class="user-card">Lorem ipsum</div>
-                <div class="user-card">Lorem ipsum</div>
-                <div class="user-card">Lorem ipsum</div>
+                <div class="user-card">
+                    <div class="user-image">
+                        <img src="img/male1.png" alt="img male1">
+                    </div>
+                    <div class="user-info">
+                        <h2>MARCO BIANCHI</h2>
+                        <h4>Designer</h4>
+                        <a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
