fix: float card

--- a/index.html
+++ b/index.html
@@ -31,20 +31,30 @@
         </div>
     </header>
 
-    <!-- User cards -->
+    <!-- Main -->
     <main>
         <div class="container">
+
+            <!-- Container Riga Card Utenti -->
             <div class="user-container">
+
+                <!-- Card Singola Utente -->
                 <div class="user-card">
+
+                    <!-- Immagine Utente -->
                     <div class="user-image">
                         <img src="img/male1.png" alt="img male1">
                     </div>
+
+                    <!-- Info Utenti -->
                     <div class="user-info">
                         <h2>MARCO BIANCHI</h2>
                         <h4>Designer</h4>
                         <a href="mailto:marcobianchi@team.com">marcobianchi@team.com</a>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </main>
