--- a/index.html
+++ b/index.html
@@ -54,8 +54,93 @@
                     </div>
                 </div>
 
+                <!-- Card Singola Utente -->
+                <div class="user-card">
+
+                    <!-- Immagine Utente -->
+                    <div class="user-image">
+                        <img src="img/female1.png" alt="img female1">
+                    </div>
+
+                    <!-- Info Utenti -->
+                    <div class="user-info">
+                        <h2>LAURA ROSSI</h2>
+                        <h4>Front-end Developer</h4>
+                        <a href="mailto:laurarossi@team.com">laurarossi@team.com</a>
+                    </div>
+                </div>
+
+                <!-- Card Singola Utente -->
+                <div class="user-card">
+
+                    <!-- Immagine Utente -->
+                    <div class="user-image">
+                        <img src="img/male2.png" alt="img male2">
+                    </div>
+
+                    <!-- Info Utenti -->
+                    <div class="user-info">
+                        <h2>GIORGIO VERDI</h2>
+                        <h4>Back-end Developer</h4>
+                        <a href="mailto:giorgioverdi@team.com">giorgioverdi@team.com</a>
+                    </div>
+                </div>
 
             </div>
+
+            <!-- Container Riga Card Utenti -->
+            <div class="user-container">
+
+                <!-- Card Singola Utente -->
+                <div class="user-card">
+
+                    <!-- Immagine Utente -->
+                    <div class="user-image">
+                        <img src="img/female2.png" alt="img female2">
+                    </div>
+
+                    <!-- Info Utenti -->
+                    <div class="user-info">
+                        <h2>MARTA IPSUM</h2>
+                        <h4>SEO Specialist</h4>
+                        <a href="mailto:martaipsum@team.com">martaipsum@team.com</a>
+                    </div>
+                </div>
+
+                <!-- Card Singola Utente -->
+                <div class="user-card">
+
+                    <!-- Immagine Utente -->
+                    <div class="user-image">
+                        <img src="img/male3.png" alt="img male3">
+                    </div>
+
+                    <!-- Info Utenti -->
+                    <div class="user-info">
+                        <h2>ROBERTO LOREM</h2>
+                        <h4>Project Manager</h4>
+                        <a href="mailto:robertolorem@team.com">robertolorem@team.com</a>
+                    </div>
+                </div>
+
+                <!-- Card Singola Utente -->
+                <div class="user-card">
+
+                    <!-- Immagine Utente -->
+                    <div class="user-image">
+                        <img src="img/female3.png" alt="img female3">
+                    </div>
+
+                    <!-- Info Utenti -->
+                    <div class="user-info">
+                        <h2>DANIELA AMET</h2>
+                        <h4>Analyst</h4>
+                        <a href="mailto:danielaamet@team.com">danielaamet@team.com</a>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </main>
 
